--- a/public/style.css
+++ b/public/style.css
@@ -1,21 +1,24 @@
-#body {
-background-color: lightgray;}
+.body {
+ background-color: lightgray;
+}
 
-#h-one {
+.h-one {
     text-align: center;
     color: rgb(11, 11, 17);
    
 }
 
-#fetch-kanto-btn {
-font-size: 1cm;
-font-weight: 200;
+.fetch-kanto-btn, .fetch-hoenn-btn {
+    font-size: 1cm;
+    font-weight: 200;
+    padding: 12px 6px;
+    border-radius: 8px;
 
 }
 
 #fetch-kanto-btn:hover {
-color:whitesmoke;
-background-color: black;
+    color:whitesmoke;
+    background-color: black;
 
 }
 
@@ -35,8 +38,13 @@ column-count: 1;
     text-align: left;
 }
 
-#header {
-background-color: black;
-color: whitesmoke;
-text-align: left;
-font-size: 10mm;}
+
+.medpad {
+    padding: 4% 0;
+}
+
+.bullets {
+    background-color: white;
+    border-radius: 10px;
+    padding: 2%;
+}
