--- a/public/style.css
+++ b/public/style.css
@@ -1,37 +1,58 @@
 .body {
  background-color: lightgray;
+ background-image: url("https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/ronburgundy-1520353235.png");
+ background-repeat: no-repeat;
+ background-attachment: fixed;
+ background-position: center;
+ background-size: 50%;
 }
 
 .h-one {
     text-align: center;
     color: rgb(11, 11, 17);
+    
    
 }
 
-.fetch-kanto-btn, .fetch-hoenn-btn {
+.header {
     font-size: 1cm;
-    font-weight: 200;
-    padding: 12px 6px;
-    border-radius: 8px;
+    background-color: black;
+    color: whitesmoke;
+    text-align: center;
+}
+
+
+
+#apiButton {
+margin: 2%;
+border-radius: 8px;
+font-size: 10mm;
+
 
 }
 
-#fetch-kanto-btn:hover {
+#apiButton:hover {
     color:whitesmoke;
     background-color: black;
 
 }
 
 #image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .info{
 text-align: center;
 column-count: 1;
+
 }
 
 .info-2 {
     column-count: 1;
+    margin: 1%;
 }
 
 .sub-info {
@@ -47,4 +68,15 @@ column-count: 1;
     background-color: white;
     border-radius: 10px;
     padding: 2%;
+}
+
+#response-output {
+    font-size: 1cm;
+    font-family: fantasy;
+    background-color: whitesmoke;
+}
+
+.col-md-5 {
+margin: 1cm;
+position: relative;
 }
